Bug 1830466: Mac a11y: Don't try to search forward for a line end boundary on a blank line. r=eeejay

1. CachedTextMarker::LineRange: If the line starts with a line feed, it's a blank line and the end boundary is the same as the start boundary, so just return the start for both.
2. TextLeafRange::FindLineEnd: If the origin is the empty last line of a textarea, we actually do want the line starting at the next character, so don't skip forward a character. Also don't skip back to the line feed after the search, since that would be the end of the previous line.

Differential Revision: https://phabricator.services.mozilla.com/D177366